# koc_od_pi

./: CMakeLists.txt  README.md
doc/: vimrc
src/apps/: gladewin  main  main.c  main.cpp  win_main.glade
src/libs/: koc_od_pi_intf.cpp  koc_od_pi_intf.h
